--- a/index.html
+++ b/index.html
@@ -68,6 +68,21 @@
     <tr><td><span onclick="speak('마늘')">마늘</span></td><td>maneul</td><td>大蒜</td><td><span onclick="speak('마늘을 먹어요')">마늘을 먹어요</span></td><td>我吃大蒜。</td></tr>
     <tr><td><span onclick="speak('양파')">양파</span></td><td>yangpa</td><td>洋蔥</td><td><span onclick="speak('양파를 먹어요')">양파를 먹어요</span></td><td>我吃洋蔥。</td></tr>
     <tr><td><span onclick="speak('고추')">고추</span></td><td>gochu</td><td>辣椒</td><td><span onclick="speak('고추를 먹어요')">고추를 먹어요</span></td><td>我吃辣椒。</td></tr>
+    <tr><td><span onclick="speak('바나나')">바나나</span></td><td>banana</td><td>香蕉</td><td><span onclick="speak('바나나를 먹어요')">바나나를 먹어요</span></td><td>我吃香蕉。</td></tr>
+    <tr><td><span onclick="speak('사과')">사과</span></td><td>sagwa</td><td>蘋果</td><td><span onclick="speak('사과를 먹어요')">사과를 먹어요</span></td><td>我吃蘋果。</td></tr>
+    <tr><td><span onclick="speak('포도')">포도</span></td><td>podo</td><td>葡萄</td><td><span onclick="speak('포도를 먹어요')">포도를 먹어요</span></td><td>我吃葡萄。</td></tr>
+    <tr><td><span onclick="speak('오렌지')">오렌지</span></td><td>orenji</td><td>柳橙</td><td><span onclick="speak('오렌지를 먹어요')">오렌지를 먹어요</span></td><td>我吃柳橙。</td></tr>
+    <tr><td><span onclick="speak('딸기')">딸기</span></td><td>ttalgi</td><td>草莓</td><td><span onclick="speak('딸기를 먹어요')">딸기를 먹어요</span></td><td>我吃草莓。</td></tr>
+    <tr><td><span onclick="speak('수박')">수박</span></td><td>subak</td><td>西瓜</td><td><span onclick="speak('수박을 먹어요')">수박을 먹어요</span></td><td>我吃西瓜。</td></tr>
+    <tr><td><span onclick="speak('복숭아')">복숭아</span></td><td>boksunga</td><td>桃子</td><td><span onclick="speak('복숭아를 먹어요')">복숭아를 먹어요</span></td><td>我吃桃子。</td></tr>
+    <tr><td><span onclick="speak('자두')">자두</span></td><td>jadu</td><td>李子</td><td><span onclick="speak('자두를 먹어요')">자두를 먹어요</span></td><td>我吃李子。</td></tr>
+    <tr><td><span onclick="speak('파인애플')">파인애플</span></td><td>painaepeul</td><td>鳳梨</td><td><span onclick="speak('파인애플을 먹어요')">파인애플을 먹어요</span></td><td>我吃鳳梨。</td></tr>
+    <tr><td><span onclick="speak('레몬')">레몬</span></td><td>lemon</td><td>檸檬</td><td><span onclick="speak('레몬을 먹어요')">레몬을 먹어요</span></td><td>我吃檸檬。</td></tr>
+    <tr><td><span onclick="speak('키위')">키위</span></td><td>kiwi</td><td>奇異果</td><td><span onclick="speak('키위를 먹어요')">키위를 먹어요</span></td><td>我吃奇異果。</td></tr>
+    <tr><td><span onclick="speak('망고')">망고</span></td><td>mango</td><td>芒果</td><td><span onclick="speak('망고를 먹어요')">망고를 먹어요</span></td><td>我吃芒果。</td></tr>
+    <tr><td><span onclick="speak('감')">감</span></td><td>gam</td><td>柿子</td><td><span onclick="speak('감을 먹어요')">감을 먹어요</span></td><td>我吃柿子。</td></tr>
+    <tr><td><span onclick="speak('멜론')">멜론</span></td><td>mellon</td><td>哈密瓜</td><td><span onclick="speak('멜론을 먹어요')">멜론을 먹어요</span></td><td>我吃哈密瓜。</td></tr>
+    <tr><td><span onclick="speak('체리')">체리</span></td><td>cheri</td><td>櫻桃</td><td><span onclick="speak('체리를 먹어요')">체리를 먹어요</span></td><td>我吃櫻桃。</td></tr>
   </table>
 
   <script>
