--- a/index.html
+++ b/index.html
@@ -1,101 +1,144 @@
-<!DOCTYPE html>
-<html lang="zh-Hant">
-<head>
-  <meta charset="UTF-8">
-  <title>蔬菜單字五格表</title>
-  <style>
-    body {
-      font-family: "Helvetica Neue", sans-serif;
-      background-color: #fef6f9;
-      padding: 20px;
-      text-align: center;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
-    th, td {
-      padding: 12px;
-      border: 1px solid #ffc1d6;
-    }
-    th {
-      background-color: #ffe0ea;
-      color: #d63384;
-    }
-    td span {
-      cursor: pointer;
-      color: #0077cc;
-    }
-    td span:hover {
-      text-decoration: underline;
-    }
-    @media (max-width: 768px) {
-      table, thead, tbody, th, td, tr {
-        display: block;
-      }
-      td {
-        border: none;
-        border-bottom: 1px solid #ccc;
-      }
-    }
-  </style>
-</head>
-<body>
-  <h1>🥦 蔬菜單字五格表（含朗讀）</h1>
-  <table>
-    <tr>
-      <th>韓文單字</th>
-      <th>羅馬拼音</th>
-      <th>中文翻譯</th>
-      <th>例句（韓文）</th>
-      <th>例句翻譯</th>
-    </tr>
-    <tr><td><span onclick="speak('오이')">오이</span></td><td>oi</td><td>小黃瓜</td><td><span onclick="speak('오이를 먹어요')">오이를 먹어요</span></td><td>我吃小黃瓜。</td></tr>
-    <tr><td><span onclick="speak('토마토')">토마토</span></td><td>tomato</td><td>番茄</td><td><span onclick="speak('토마토를 먹어요')">토마토를 먹어요</span></td><td>我吃番茄。</td></tr>
-    <tr><td><span onclick="speak('당근')">당근</span></td><td>danggeun</td><td>胡蘿蔔</td><td><span onclick="speak('당근을 먹어요')">당근을 먹어요</span></td><td>我吃胡蘿蔔。</td></tr>
-    <tr><td><span onclick="speak('감자')">감자</span></td><td>gamja</td><td>馬鈴薯</td><td><span onclick="speak('감자를 먹어요')">감자를 먹어요</span></td><td>我吃馬鈴薯。</td></tr>
-    <tr><td><span onclick="speak('고구마')">고구마</span></td><td>goguma</td><td>地瓜</td><td><span onclick="speak('고구마를 먹어요')">고구마를 먹어요</span></td><td>我吃地瓜。</td></tr>
-    <tr><td><span onclick="speak('호박')">호박</span></td><td>hobak</td><td>南瓜</td><td><span onclick="speak('호박을 먹어요')">호박을 먹어요</span></td><td>我吃南瓜。</td></tr>
-    <tr><td><span onclick="speak('가지')">가지</span></td><td>gaji</td><td>茄子</td><td><span onclick="speak('가지를 먹어요')">가지를 먹어요</span></td><td>我吃茄子。</td></tr>
-    <tr><td><span onclick="speak('버섯')">버섯</span></td><td>beoseot</td><td>蘑菇</td><td><span onclick="speak('버섯을 먹어요')">버섯을 먹어요</span></td><td>我吃蘑菇。</td></tr>
-    <tr><td><span onclick="speak('양배추')">양배추</span></td><td>yangbaechu</td><td>高麗菜</td><td><span onclick="speak('양배추를 먹어요')">양배추를 먹어요</span></td><td>我吃高麗菜。</td></tr>
-    <tr><td><span onclick="speak('배추')">배추</span></td><td>baechu</td><td>白菜</td><td><span onclick="speak('배추를 먹어요')">배추를 먹어요</span></td><td>我吃白菜。</td></tr>
-    <tr><td><span onclick="speak('상추')">상추</span></td><td>sangchu</td><td>生菜</td><td><span onclick="speak('상추를 먹어요')">상추를 먹어요</span></td><td>我吃生菜。</td></tr>
-    <tr><td><span onclick="speak('파')">파</span></td><td>pa</td><td>蔥</td><td><span onclick="speak('파를 먹어요')">파를 먹어요</span></td><td>我吃蔥。</td></tr>
-    <tr><td><span onclick="speak('마늘')">마늘</span></td><td>maneul</td><td>大蒜</td><td><span onclick="speak('마늘을 먹어요')">마늘을 먹어요</span></td><td>我吃大蒜。</td></tr>
-    <tr><td><span onclick="speak('양파')">양파</span></td><td>yangpa</td><td>洋蔥</td><td><span onclick="speak('양파를 먹어요')">양파를 먹어요</span></td><td>我吃洋蔥。</td></tr>
-    <tr><td><span onclick="speak('고추')">고추</span></td><td>gochu</td><td>辣椒</td><td><span onclick="speak('고추를 먹어요')">고추를 먹어요</span></td><td>我吃辣椒。</td></tr>
-    <tr><td><span onclick="speak('바나나')">바나나</span></td><td>banana</td><td>香蕉</td><td><span onclick="speak('바나나를 먹어요')">바나나를 먹어요</span></td><td>我吃香蕉。</td></tr>
-    <tr><td><span onclick="speak('사과')">사과</span></td><td>sagwa</td><td>蘋果</td><td><span onclick="speak('사과를 먹어요')">사과를 먹어요</span></td><td>我吃蘋果。</td></tr>
-    <tr><td><span onclick="speak('포도')">포도</span></td><td>podo</td><td>葡萄</td><td><span onclick="speak('포도를 먹어요')">포도를 먹어요</span></td><td>我吃葡萄。</td></tr>
-    <tr><td><span onclick="speak('오렌지')">오렌지</span></td><td>orenji</td><td>柳橙</td><td><span onclick="speak('오렌지를 먹어요')">오렌지를 먹어요</span></td><td>我吃柳橙。</td></tr>
-    <tr><td><span onclick="speak('딸기')">딸기</span></td><td>ttalgi</td><td>草莓</td><td><span onclick="speak('딸기를 먹어요')">딸기를 먹어요</span></td><td>我吃草莓。</td></tr>
-    <tr><td><span onclick="speak('수박')">수박</span></td><td>subak</td><td>西瓜</td><td><span onclick="speak('수박을 먹어요')">수박을 먹어요</span></td><td>我吃西瓜。</td></tr>
-    <tr><td><span onclick="speak('복숭아')">복숭아</span></td><td>boksunga</td><td>桃子</td><td><span onclick="speak('복숭아를 먹어요')">복숭아를 먹어요</span></td><td>我吃桃子。</td></tr>
-    <tr><td><span onclick="speak('자두')">자두</span></td><td>jadu</td><td>李子</td><td><span onclick="speak('자두를 먹어요')">자두를 먹어요</span></td><td>我吃李子。</td></tr>
-    <tr><td><span onclick="speak('파인애플')">파인애플</span></td><td>painaepeul</td><td>鳳梨</td><td><span onclick="speak('파인애플을 먹어요')">파인애플을 먹어요</span></td><td>我吃鳳梨。</td></tr>
-    <tr><td><span onclick="speak('레몬')">레몬</span></td><td>lemon</td><td>檸檬</td><td><span onclick="speak('레몬을 먹어요')">레몬을 먹어요</span></td><td>我吃檸檬。</td></tr>
-    <tr><td><span onclick="speak('키위')">키위</span></td><td>kiwi</td><td>奇異果</td><td><span onclick="speak('키위를 먹어요')">키위를 먹어요</span></td><td>我吃奇異果。</td></tr>
-    <tr><td><span onclick="speak('망고')">망고</span></td><td>mango</td><td>芒果</td><td><span onclick="speak('망고를 먹어요')">망고를 먹어요</span></td><td>我吃芒果。</td></tr>
-    <tr><td><span onclick="speak('감')">감</span></td><td>gam</td><td>柿子</td><td><span onclick="speak('감을 먹어요')">감을 먹어요</span></td><td>我吃柿子。</td></tr>
-    <tr><td><span onclick="speak('멜론')">멜론</span></td><td>mellon</td><td>哈密瓜</td><td><span onclick="speak('멜론을 먹어요')">멜론을 먹어요</span></td><td>我吃哈密瓜。</td></tr>
-    <tr><td><span onclick="speak('체리')">체리</span></td><td>cheri</td><td>櫻桃</td><td><span onclick="speak('체리를 먹어요')">체리를 먹어요</span></td><td>我吃櫻桃。</td></tr>
-  </table>
+<div class="center" style="margin:1rem 0;">
+  <button id="unlockTTS">🔓 啟動語音（iPhone 請先點我一次）</button>
+</div>
 
-  <script>
-    function speak(text) {
-      if ('speechSynthesis' in window) {
-        const utter = new SpeechSynthesisUtterance(text);
-        utter.lang = "ko-KR";
-        speechSynthesis.cancel();
-        setTimeout(() => speechSynthesis.speak(utter), 100);
-      } else {
-        alert("你的瀏覽器不支援語音朗讀");
+<script>
+  let koVoice = null;
+  let speechReady = false;
+  let keepAliveTimer = null;
+
+  function loadVoices() {
+    const voices = speechSynthesis.getVoices?.() || [];
+    koVoice = voices.find(v => (v.lang||'').toLowerCase().startsWith('ko'))
+          || voices.find(v => (v.name||'').toLowerCase().includes('korean'))
+          || null;
+  }
+  if ('speechSynthesis' in window) {
+    loadVoices();
+    speechSynthesis.onvoiceschanged = loadVoices;
+  }
+
+  function ensureResume() {
+    try { speechSynthesis.resume(); } catch(e) {}
+  }
+
+  // iOS：播放期間定時 "喚醒"，避免被系統暫停
+  function startKeepAlive() {
+    stopKeepAlive();
+    keepAliveTimer = setInterval(() => {
+      if (speechSynthesis.paused || !speechSynthesis.speaking) return;
+      ensureResume();
+    }, 900); // 0.9 秒
+  }
+  function stopKeepAlive() {
+    if (keepAliveTimer) {
+      clearInterval(keepAliveTimer);
+      keepAliveTimer = null;
+    }
+  }
+
+  // 解鎖（需使用者手勢）
+  function unlockSpeech() {
+    if (!('speechSynthesis' in window)) {
+      alert('此瀏覽器不支援語音朗讀，請改用 Safari/Chrome。');
+      return;
+    }
+    speechSynthesis.cancel();
+    ensureResume();
+
+    const u = new SpeechSynthesisUtterance('시작'); //「開始」
+    u.lang = 'ko-KR';
+    if (koVoice) u.voice = koVoice;
+    u.volume = 0; // 靜音觸發
+    u.onend = () => {
+      speechReady = true;
+      const btn = document.getElementById('unlockTTS');
+      if (btn) {
+        btn.textContent = '✅ 語音已啟動（可以播放）';
+        btn.disabled = true;
+        btn.style.opacity = 0.7;
+      }
+    };
+    speechSynthesis.speak(u);
+  }
+
+  // 將長句切塊（iOS 對很長文字較不穩）
+  function chunkKorean(text) {
+    const t = String(text).trim();
+    if (!t) return [];
+    // 依句號/問號/逗號/頓號/空白做溫和切分
+    const parts = t.split(/([.?!…]|[，、。？！]|\s{2,})/).filter(Boolean);
+    // 合併切分符號，避免丟標點
+    const merged = [];
+    for (let i = 0; i < parts.length; i++) {
+      const cur = parts[i];
+      if (/[.?!…，、。？！]/.test(cur) && merged.length) {
+        merged[merged.length - 1] += cur;
+      } else if (cur.trim()) {
+        merged.push(cur.trim());
       }
     }
-  </script>
-</body>
-</html>
+    // 再把過短的片段合併，避免太碎
+    const result = [];
+    let buf = '';
+    for (const seg of merged) {
+      if ((buf + ' ' + seg).length <= 40) {
+        buf = buf ? (buf + ' ' + seg) : seg;
+      } else {
+        if (buf) result.push(buf);
+        buf = seg;
+      }
+    }
+    if (buf) result.push(buf);
+    return result;
+  }
+
+  // 核心播音：含 cancel/resume/失敗重試/keepAlive
+  function speak(text) {
+    if (!('speechSynthesis' in window)) {
+      alert('此瀏覽器不支援語音朗讀。'); return;
+    }
+    if (!speechReady && /iPhone|iPad|iPod/i.test(navigator.userAgent)) {
+      alert('請先點上方「啟動語音」一次，才能在 iPhone 播放。');
+      return;
+    }
+
+    speechSynthesis.cancel();
+    ensureResume();
+
+    const queue = chunkKorean(text);
+    let idx = 0;
+
+    function playNext() {
+      if (idx >= queue.length) {
+        stopKeepAlive();
+        return;
+      }
+      const u = new SpeechSynthesisUtterance(queue[idx]);
+      u.lang = 'ko-KR';
+      if (koVoice) u.voice = koVoice;
+      u.rate = 0.95;
+      u.pitch = 1.0;
+      u.onstart = () => { startKeepAlive(); };
+      u.onend = () => { idx++; playNext(); };
+      u.onerror = () => {
+        // Safari 偶發錯誤：retry 一次
+        setTimeout(() => {
+          ensureResume();
+          speechSynthesis.cancel();
+          setTimeout(() => speechSynthesis.speak(u), 120);
+        }, 80);
+      };
+      speechSynthesis.speak(u);
+    }
+    playNext();
+  }
+
+  document.getElementById('unlockTTS')?.addEventListener('click', unlockSpeech);
+  document.addEventListener('visibilitychange', () => {
+    if (document.visibilityState === 'visible') ensureResume();
+  });
+  // 將 speak 暴露到全域（維持你原本按鈕 onclick="speak('...')"）
+  window.speak = speak;
+</script>
+
